# accesscontrol_accesscontrol_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
mock/: ohos.ability_access_ctrl.cj  ohos.security.permission_request_result.cj
ohos/ability_access_ctrl/: BUILD.gn  cj_ability_access_ctrl.cj  cj_ability_access_ctrl_error.cj
ohos/security/permission_request_result/: BUILD.gn  permission_request_result.cj
test/APILevel21/ability_access_ctrl/test/entry/src/main/cangjie/src/: Test_ability_access_ctrl.cj
test/APILevel22/ability_access_ctrl/test/entry/src/main/cangjie/src/: Test_ability_access_ctrl.cj
test/ability_access_ctrl/test/entry/src/main/cangjie/src/: Test_ability_access_ctrl_llt.cj  Test_permission_request_result_llt.cj  ability_stage.cj  test_list_ability_access_ctrl.cj
